<resources>
    <string name="app_name">Rasidi</string>
    <string name="number_verification">Number Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you one time code on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_963">+963-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_code">Get Code</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>

    <!-- -->
    <string name="middle_name">Mid name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="land_phone_number">Land phone number</string>
    <string name="address">Address</string>
    <string name="home_nav_title_operations">Operations</string>
    <string name="home_nav_title_home">Home</string>
    <string name="home_nav_title_notifications">Notifications</string>
    <string name="logo">rasidi.logo</string>
    <string name="log_out">Log out</string>
    <string name="your_name">Your Name:</string>
    <string name="your_balance">Your Balance:</string>
    <string name="default_name">oday i kraym</string>
    <string name="phone_hint">Mobile Number</string>
    <string name="btn_submit_operation">Submit</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="provider">Provider</string>
    <string name="category">Category</string>
    <string name="number">Number</string>
    <string name="home_nav_title_bills">Bills</string>
    <string name="bill_value">Bill Value :</string>
    <string name="bill_type">Bill Type :</string>
    <string name="bill_payment_date">Payment Date :</string>
    <string name="pay">"Pay "</string>

</resources>