<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    android:layoutDirection="ltr"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/left_linear"
            android:layout_margin="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/linearBillType">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/bill_type"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            <TextView
                android:id="@+id/idTVBillType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/linearBillValue">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/bill_value"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/idTVBillValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearBillPaymentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/bill_payment_date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/idTVBillPaymentDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>


        </LinearLayout>
       <LinearLayout
           android:id="@+id/left_linear"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_alignParentEnd="true"
           android:weightSum="2">
           <!--text view for displaying first name-->
           <com.google.android.material.textview.MaterialTextView
               android:id="@+id/isPaid_txt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:layout_margin="5dp"
               app:textAllCaps="true"
               android:padding="2dp"
               android:background="@color/md_blue_grey_50"
               android:alpha="0.7"
               android:text="_status"
               android:layout_weight="1"
               android:layout_gravity="center_horizontal"
               />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/pay_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/pay"
               android:padding="10dp"
               android:layout_margin="5dp"
               android:textColor="@color/md_blue_grey_900"
               android:background="@drawable/bg_login_signup_btn"
               android:layout_weight="1"
               android:layout_gravity="center_horizontal"
               />
       </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>