<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/provider"
                android:textSize="26sp"
                android:layout_weight="1" />

            <RelativeLayout
                android:id="@+id/custom_spinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="2">

                <Spinner
                    android:id="@+id/custom_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/call_btn_bg"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textSize="100sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_arrow_down_spinner"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/category"
                android:textSize="26sp"
                android:layout_weight="1"

                />
            <RelativeLayout
                android:id="@+id/spinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_gravity="end"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/call_btn_bg"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textSize="100sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_arrow_down_spinner"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_box_input"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtInLayoutPassword"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp"
                    app:passwordToggleTint="@color/colorAccent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_op_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:background="@drawable/phone_box_input"/>
                </com.google.android.material.textfield.TextInputLayout>/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/call_btn_bg"
                android:text="@string/btn_submit_operation"
                android:textColor="@drawable/call_btn_text"
                android:textSize="25sp"
                android:onClick="submitOperation"/>
            <ProgressBar
                android:id="@+id/add_op_PB"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center" />
        </FrameLayout>


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wave_add_op"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wave_add_op"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom"
        android:alpha=".6"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wave_add_op_2"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom"
        android:alpha=".7"/>

</FrameLayout>