<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/white">
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/enter_screen_header_image_corner"
            android:layout_alignParentTop="true"
            android:elevation="3dp"
            android:layout_alignTop="@+id/linear2"
            >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:scaleType="fitStart"
                android:src="@drawable/wave2" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:scaleType="fitStart"
                android:src="@drawable/wave1"
                />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="220dp"
                android:layout_height="113dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/logo"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_main" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:id="@+id/user_balance_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:text="@string/your_balance"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_balance_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="@color/colorAccent"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_below="@id/user_balance_layout"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:text="@string/your_name"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_name_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/user_mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name_layout"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">
                    <!-- margin start = 16-->
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:letterSpacing="0.0178571429"
                        android:text="@string/mobile_number"
                        android:layout_weight="1"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_mobile_txt"
                        android:layout_below="@id/user_name_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:letterSpacing="0.0178571429"
                        android:layout_weight="1"/>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout_btn"
                    android:layout_below="@id/user_mobile_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:textColor="@color/light_red"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>